bug-042574 - On payment options >> alignment of wallet checkbox and text is not right

--- a/application/views/css/main-ltr.css
+++ b/application/views/css/main-ltr.css
@@ -31735,6 +31735,14 @@ a.ui-button:active,
   @media (max-width: 991.98px) {
     .logo-checkout-main {
       max-width: 100px; } }
+  @media (max-width: 1199.98px) {
+    .logo-checkout-main {
+      margin: 0 auto;
+      max-width: 100px; } }
+  .logo-checkout-main img[data-ratio="16:9"], .logo-checkout-main .post .post_media iframe[data-ratio="16:9"], .post .post_media .logo-checkout-main iframe[data-ratio="16:9"], .logo-checkout-main .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="16:9"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .logo-checkout-main img[data-ratio="16:9"], .logo-checkout-main .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="16:9"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .logo-checkout-main img[data-ratio="16:9"] {
+    max-width: 120px; }
+  .logo-checkout-main img[data-ratio="1:1"], .logo-checkout-main .post .post_media iframe[data-ratio="1:1"], .post .post_media .logo-checkout-main iframe[data-ratio="1:1"], .logo-checkout-main .post .post_media .posted-content .posted-media .post__pic .media-wrapper img[data-ratio="1:1"], .post .post_media .posted-content .posted-media .post__pic .media-wrapper .logo-checkout-main img[data-ratio="1:1"], .logo-checkout-main .posted-content .posted-media .post__pic .media-wrapper .post .post_media img[data-ratio="1:1"], .posted-content .posted-media .post__pic .media-wrapper .post .post_media .logo-checkout-main img[data-ratio="1:1"] {
+    max-width: 60px; }
 
 .order-summary-toggle {
   background: #f3f4f5;
